Lagt til ui og main-metode (#27)